data/cloudformation_collected_templates_new/template_05468_layer-one.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Basic layer one resources
Parameters: 
  Name: 
    Type: String
    Description: The name prefix for all resources.
    Default: ""
  CustomInstanceType: 
    Type: String
    Description: The instance type of the Amazon EC2 instances.
    Default: ""
  CustomImageId: 
    Type: String
    Description: The image id of the Amazon EC2 instances.
    Default: ""
Resources:
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub LayerOne-${Name}-EC2
      GroupDescription: Layer One EC2 Security Group
      VpcId: {'Fn::ImportValue': !Sub 'layer-zero-VPCId'}
      Tags:
        - Key: Name
          Value: !Ref Name

  LBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub LayerOne-${Name}-LB
      GroupDescription: Layer One LB Security Group
      VpcId: {'Fn::ImportValue': !Sub 'layer-zero-VPCId'}
      Tags:
        - Key: Name
          Value: !Ref Name

  LBSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    # checkov:skip=CKV_AWS_260: This SG ingress is for the LB
    Properties:
      GroupId: !Ref LBSecurityGroup
      IpProtocol: tcp
      CidrIp: 0.0.0.0/0
      FromPort: 80
      ToPort: 80
      Description: "Allow traffic from anywhere to LB"

  LBSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref LBSecurityGroup
      IpProtocol: tcp
      CidrIp: 0.0.0.0/0
      FromPort: 80
      ToPort: 80
      Description: "Allow traffic from LB to anywhere"
    
  EC2SecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref LBSecurityGroup
      FromPort: 80
      ToPort: 80
      Description: Allow traffic from LB to EC2

  EC2SecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: tcp
      CidrIp: 0.0.0.0/0
      FromPort: 80
      ToPort: 80
      Description: Allow traffic from EC2 to LB
  EC2SecurityGroupEgressForSSM:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: -1
      CidrIp: 0.0.0.0/0
      FromPort: 0
      ToPort: 0
      Description: Allow connecton to SSM
  ApplicationLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    # checkov:skip=CKV_AWS_79: This is for demo purpose
    Properties:
      LaunchTemplateName: application
      LaunchTemplateData:
        ImageId: !Ref CustomImageId
        InstanceType: !Ref CustomInstanceType
        SecurityGroupIds:
          - !Ref EC2SecurityGroup
        UserData: !Base64 |
          #!/bin/bash
          amazon-linux-extras install epel -y
          yum update -y
          yum install stress -y
          yum install -y httpd.x86_64
          yum install -y jq
          REGION_AV_ZONE=`curl -s http://169.254.169.254/latest/dynamic/instance-identity/document | jq .availabilityZone -r`
          systemctl start httpd.service
          systemctl enable httpd.service
          echo "Updated Message: Hello World from $(hostname -f) from the availability zone: $REGION_AV_ZONE" > /var/www/html/index.html
        IamInstanceProfile:
          Name: !Ref EC2InstanceProfile

  ApplicationAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Ref Name
      MinSize: 2
      MaxSize: 6
      DesiredCapacity: 2
      HealthCheckGracePeriod: 480
      LaunchTemplate:
        LaunchTemplateId: !Ref ApplicationLaunchTemplate
        Version: !GetAtt [ApplicationLaunchTemplate, LatestVersionNumber]
      VPCZoneIdentifier: [{Fn::ImportValue: !Sub 'layer-zero-PrivateSubnetIds'}]
      HealthCheckType: ELB
      TargetGroupARNs:
        - !Ref FrontTargetGroup
      Tags:
        - Key: Name
          Value: !Ref Name
          PropagateAtLaunch: true
      LifecycleHookSpecificationList:
        - LifecycleTransition: autoscaling:EC2_INSTANCE_LAUNCHING
          HeartbeatTimeout: 300
          DefaultResult: CONTINUE
          LifecycleHookName: !Ref Name

  ASGPolicyUp:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref ApplicationAutoScalingGroup
      PolicyName: asg_policy_up
      ScalingAdjustment: 1
      AdjustmentType: ChangeInCapacity
      Cooldown: 300

  ASGCPUAlarmUp:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: asg_cpu_alarm_up
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 2
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      Period: 60
      Statistic: Average
      Threshold: 70
      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref ApplicationAutoScalingGroup
      AlarmDescription: This metric monitors EC2 CPU utilization
      AlarmActions:
        - !Ref ASGPolicyUp
      Tags:
        - Key: Name
          Value: !Ref Name

  ASGPolicyDown:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref ApplicationAutoScalingGroup
      PolicyName: asg_policy_down
      ScalingAdjustment: -1
      AdjustmentType: ChangeInCapacity
      Cooldown: 300

  ASGCPUAlarmDown:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: asg_cpu_alarm_down
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 2
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      Period: 60
      Statistic: Average
      Threshold: 30
      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref ApplicationAutoScalingGroup
      AlarmDescription: This metric monitors EC2 CPU utilization
      AlarmActions:
        - !Ref ASGPolicyDown
      Tags:
        - Key: Name
          Value: !Ref Name

  EC2Role:
    Type: "AWS::IAM::Role"
    Properties:
      RoleName: !Sub '${Name}_ec2_role'
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service: "ec2.amazonaws.com"
            Action: "sts:AssumeRole"
      Tags:
        - Key: Name
          Value: !Ref Name

  EC2InstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      InstanceProfileName: !Sub '${Name}_ec2_profile'
      Roles:
        - Ref: "EC2Role"

  FrontTargetGroup:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      Name: !Sub '${Name}-front'
      Port: 80
      Protocol: HTTP
      VpcId: {'Fn::ImportValue': !Sub 'layer-zero-VPCId'}
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: "/"
      HealthCheckPort: "traffic-port"
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 3
      HealthyThresholdCount: 3
      UnhealthyThresholdCount: 2
      Matcher:
        HttpCode: "200"
      Tags:
        - Key: Name
          Value: !Ref Name

  FrontListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    # checkov:skip=CKV_AWS_103: This is for demo purpose
    # checkov:skip=CKV_AWS_2: This is for demo purpose
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref FrontTargetGroup
      LoadBalancerArn: !Ref FrontLoadBalancer
      Port: 80
      Protocol: HTTP

  FrontLoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    # checkov:skip=CKV_AWS_91: This is for demo purpose
    # checkov:skip=CKV_AWS_131: This is for demo purpose
    Properties:
      Name: !Ref Name
      Scheme: internet-facing
      Type: application
      Subnets: 
      - !Select [0, !Split [",", {'Fn::ImportValue': !Sub 'layer-zero-PublicSubnetIds'}]]
      - !Select [1, !Split [",", {'Fn::ImportValue': !Sub 'layer-zero-PublicSubnetIds'}]]
      SecurityGroups:
        - !Ref LBSecurityGroup
      Tags:
        - Key: Name
          Value: !Ref Name
